@@ -82,6 +82,8 @@
     "name_equity"
     "name_income"
     "name_expenses"
+    "bookin_algorithm"
+    "bookin_method"
     "account_previous_balances"
     "account_previous_earnings"
     "account_previous_conversions"
@@ -92,8 +94,6 @@
     "inferred_tolerance_default"
     "inferred_tolerance_multiplier"
     "infer_tolerance_from_cost"
-    "tolerance"
-    "use_legacy_fixed_tolerances"
     "documents"
     "operating_currency"
     "render_commas"
